<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_scrollFlags="scroll|enterAlways|snap" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/action_mode_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        android:visibility="gone"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingTop="30dp"
            android:orientation="vertical"
            android:clickable="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/filter_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/fragment_main_filter_title"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.SearchView
                        android:id="@+id/search_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        app:iconifiedByDefault="false"
                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:queryHint="@string/fragment_main_filter_search"/>

                    <bzh.zelyon.listdetail.views.FilterView
                        android:id="@+id/house_filter_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:title="@string/fragment_main_filter_house"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"/>

                    <bzh.zelyon.listdetail.views.FilterView
                        android:id="@+id/other_filter_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:title="@string/fragment_main_filter_other"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"/>

                </LinearLayout>

            </ScrollView>

            <android.support.design.button.MaterialButton
                android:id="@+id/valid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/fragment_main_filter_valid"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

        </LinearLayout>

        <View
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@color/black_transparent"/>

    </LinearLayout>

</RelativeLayout>